   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an
   individual queue, the PAUSEALL/UNPAUSEALL event will only be logged if at
   least one member of any queue exists for that interface.

Queue
-------------------
 * Add queue available hint.  exten => 8501,hint,Queue:markq_avail
   Note: the suffix '_avail' after the queuename.
   Reports 'InUse' for no logged in agents or no free agents.
   Reports 'Idle' when an agent is free.

Core
------------------
 * Redirecting reasons can now be set to arbitrary strings. This means
   that the REDIRECTING dialplan function can be used to set the redirecting
   reason to any string. It also allows for custom strings to be read as the
   redirecting reason from SIP Diversion headers.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 10 to Asterisk 11 --------------------
------------------------------------------------------------------------------

Build System
-------------------
 * The Asterisk build system will now build and install a shared library
   (libasteriskssl.so) used to wrap various initialization and shutdown functions
   from the libssl and libcrypto libraries provided by OpenSSL. This is done so
   that Asterisk can ensure that these functions do *not* get called by any
   modules that are loaded into Asterisk, since they should only be called once
   in any single process. If desired, this feature can be disabled by supplying
   the "--disable-asteriskssl" option to the configure script.

 * A new make target, 'full', has been added to the Makefile.  This performs
   the same compilation actions as make all, but will also scan the entirety of
   each source file for documentation.  This option is needed to generate AMI